# pedal-drill

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 1590xx-cad-analysis.md  native-yaml.md
docs/cad-analysis/: 1550b.md  1590a.md  1590b.md  1590b2.md  1590bb.md  1590g.md  1590x.md  summary.md
examples/: native-1590bb.yaml
src/pedal_drill/: __init__.py  __main__.py  cli.py  geometry.py  label_placement.py  model.py  overview.py
src/pedal_drill/enclosures/: __init__.py  catalog.py  model.py  units.py  validation.py
src/pedal_drill/enclosures/definitions/: __init__.py  hammond_1550b.json  hammond_1590a.json  hammond_1590b.json  hammond_1590b2.json  hammond_1590b3.json  hammond_1590bb.json  hammond_1590bb2.json  hammond_1590g.json  hammond_1590x.json  hammond_1590xx.json
src/pedal_drill/parsers/: __init__.py  base.py  dispatch.py  native_yaml.py  tayda_txt.py
src/pedal_drill/renderers/: __init__.py  geometry.py  pdf.py  styles.py
tests/: test_analyze_enclosure_cad.py  test_cli.py  test_enclosures.py  test_label_placement.py  test_layout_validation.py  test_model.py  test_native_yaml.py  test_native_yaml_integration.py  test_overview_features.py  test_overview_geometry.py  test_pdf_renderer.py  test_renderer_geometry.py  test_renderer_styles.py  test_tayda_txt.py  test_trapezoid_geometry.py
tests/data/: tayda_compound_capsule.txt
tools/: README.md  analyze_enclosure_cad.py  requirements-cad.txt
