[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pedal-drill"
version = "0.1.0"
description = "Create printable drill templates for guitar-pedal enclosures."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "pedal-drill contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["reportlab>=4.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
pedal-drill = "pedal_drill.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/pedal_drill"]
